collect 함수 추가 Collectors.toList()